<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/register_main_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/whiteBg"
              android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <LinearLayout
        android:id="@+id/phone_layout_f"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_bind_phone_mark"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_middle"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_hint1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="您当前的手机号为：********"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/textSize_normal"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hint1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_normal"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/change_bindphone_hint"
                android:textColor="@color/font_gray"
                android:textSize="@dimen/textSize_normal"
                />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/usrmidpwd" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingRight="2dp">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sso_reg_phone_icon" />

            <EditText
                android:id="@+id/edt_new_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_normal"
                android:background="@color/whiteBg"
                android:gravity="center_vertical"
                android:hint="@string/newphone_hint"
                android:maxLength="11"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingTop="13dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/usrmidpwd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingRight="2dp">

            <ImageView
                android:id="@id/phone_code_imglabel"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sso_reg_phone_code_icon" />

            <EditText
                android:id="@+id/edt_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/whiteBg"
                android:gravity="center_vertical"
                android:hint="@string/regUsrtips_phone_code"
                android:maxLength="6"
                android:inputType="number"
                android:paddingBottom="10dp"
                android:paddingTop="13dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_getCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:background="@drawable/selector_sso_btn_green_stroke"
                android:padding="5dp"
                android:text="@string/get_code"
                android:textColor="@color/greenBg" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/usrmidpwd" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sso_usrbg">

            <ImageView
                android:id="@+id/email_imglabel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sso_reg_mail_icon" />

            <EditText
                android:id="@+id/regUsr_imail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="2dp"
                android:background="@color/whiteBg"
                android:hint="@string/regUsrtips_emai"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:paddingTop="13dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/usrmidpwd" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sso_pwdbg">

            <EditText
                android:id="@+id/regPwd_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/pwd_label_email"
                android:background="@color/whiteBg"
                android:ems="10"
                android:hint="@string/regPwdtips"
                android:inputType="textPassword"
                android:maxLength="40"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp"></EditText>

            <RelativeLayout
                android:id="@+id/hidePwdLayout_email"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp">

                <ImageView
                    android:id="@+id/hidePwdImg_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/sso_hidepwd" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/pwd_label_email"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@+id/regPwd_email"
                android:layout_marginLeft="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/sso_pwd" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnselector"
        android:text="@string/confirm_update"
        android:textColor="@color/whiteBg"
        android:textSize="@dimen/textSize_high" />

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_middle"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/textSize_normal"
            android:textColor="@color/get_client_begin"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:gravity="center"
            android:text="@string/meet_problem"/>
        <TextView
            android:id="@+id/tv_get_master"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/textSize_normal"
            android:textColor="@color/get_client_end"
            android:text="@string/contact_master"/>

    </LinearLayout>

</LinearLayout>