<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="1dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:src="@drawable/sso_usr" />

        <EditText
            android:id="@+id/usr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@color/whiteBg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/usrHint"
            android:maxLength="50"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/edittext_hint_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/usrmidpwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="1dp">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:src="@drawable/sso_pwd" />

        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@color/whiteBg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/pwdHint"
            android:inputType="textPassword"
            android:maxLength="15"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/edittext_hint_color"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/usrmidpwd" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnselector"
        android:text="@string/loginBtn"
        android:textColor="@color/whiteBg"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/register"
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_regis"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/register"
                android:textColor="@color/regcolor"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rv_forget_pwd"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/not_paw"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:text="@string/forgetPwd"
                android:textColor="@color/regcolor"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/firstSee"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:visibility="gone">

        <View
            android:layout_width="1sp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:background="@color/gray" />

        <TextView
            android:layout_width="50sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.60"
            android:gravity="center"
            android:text="@string/otherLogin"
            android:textColor="@color/gray"
            android:textSize="14sp" />

        <View
            android:layout_width="1sp"
            android:layout_height="0.5dp"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10sp"
            android:layout_weight="1"
            android:background="@color/gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/login_by_weixin_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_wechat_login"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_wechat_login_temp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="微信账号登录"
                android:textColor="#7380a4" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/login_by_weibo"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_weight="1"
                android:background="@drawable/sso_sina" />

            <ImageView
                android:id="@+id/login_by_qq"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/sso_qq" />

            <ImageView
                android:id="@+id/login_by_weixin"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="@drawable/sso_weixin" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>